--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.6",
     "jsdom": "^26.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
+    "marked": "^16.1.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
