--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "jsdom": "^26.1.0",
     "leaflet": "^1.9.4",
